tests/tests/neg/error_messages/desugar/final_assoc_reft00.rs
#[flux::final_assoc(fn foo() -> bool)] //~ERROR final associated refinements must have a body
pub trait MyTrait {}
